--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "body-parser": "^2.2.1",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
+    "dotenv": "^17.2.3",
     "exceljs": "^4.4.0",
     "express": "^5.2.1",
     "node-fetch": "^3.3.2",
